# histogram

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .clang_complete  .codecov.yml  .drone.star  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Jamfile  Jamfile.v2  LICENSE  README.md  appveyor.yml  build.jam  histogram.sublime-project
.drone/: boost.sh
.github/workflows/: ccpp.yml  ci.yml  cov.yml  doc.yml  fast.yml  slow.yml  superproject_cmake.yml
CMake/: CMakeLists.txt  FindNumpy.cmake
benchmark/: CMakeLists.txt  Jamfile  axis_index.cpp  axis_size.cpp  detail_eytzinger_search.cpp  generator.hpp  histogram_filling.cpp  histogram_filling_experiments.cpp  histogram_filling_gsl.cpp  histogram_filling_numpy.py  histogram_filling_root.cpp  histogram_iteration.cpp  histogram_parallel_filling.cpp  plot_benchmarks.py  run_benchmarks.py  speed_boost.cpp  speed_root.cpp
doc/: Jamfile  Jamfile.jam  Jamfile.v2  README.md  autodoc.xml  benchmark.py  benchmarks.qbk  bibliography.qbk  build.qbk  changelog.qbk  concepts.qbk  doxygen_postprocessing.py  extract_code.py  fill_boost.json  fill_gsl.json  fill_performance.perf  fill_performance.py  fill_root.json  getting_started.qbk  guide.qbk  histogram.qbk  history.qbk  index.qbk  intro.qbk  iteration.perf  iteration_performance.py  motivation.qbk  notes.qbk  overview.qbk  plot_fill_performance.py  plot_iteration_performance.py  push_docs.sh  rationale.qbk  references.qbk  sync_code.py  tutorial.qbk
doc/concepts/: Accumulator.qbk  Axis.qbk  DiscreteAxis.qbk  IntervalAxis.qbk  Storage.qbk  Transform.qbk
doc/html/: BOOST_HISTOGRAM_AXIS_LIMIT.html  BOOST_HISTOGRAM_BASE_APPEND.html  BOOST_HISTOGRAM_BASE_CTOR.html  BOOST_HISTOGRAM_CTOR.html  BOOST_HISTOGRAM_FILL.html  BOOST_HISTOGRAM_STRING_VIEW.html  BOOST_HISTOGRAM_VALUE.html  BOOST_HISTOGRAM_VARIANCE.html  BOOST_HISTOGRAM_WFILL.html  changelog.html  functions.html  genindex.html  histogram_HTML.manifest  index.html  intro.html  motivation.html  notes.html  objects.inv  py-modindex.html  rationale.html  references.html  search.html  searchindex.js  standalone_HTML.manifest  tutorial.html  types.html
doc/html/boost_histogram/: changelog.html  introduction.html  motivation.html  notes.html  rationale.html  references.html  tutorial.html
doc/html/histogram/: abstract.html  acknowledgments.html  benchmarks.html  changelog.html  concepts.html  getting_started.html  guide.html  motivation.html  rationale.html  reference.html  references.html  setup.html  tutorial.html  user_guide.html
doc/sphinx/: conf.py  conf.py.in  index.rst  intro.rst  motivation.rst  notes.rst  rationale.rst  references.rst  tutorial.rst  types.rst
examples/: Jamfile  create_dynamic_histogram.cpp  create_in_python_fill_in_cpp.py  create_python_fill_cpp.py  dynamic_axes.cpp  example_1d.cpp  example_1d.py  example_2d.cpp  example_2d.py  getting_started_listing_01.cpp  getting_started_listing_02.cpp  getting_started_listing_03.cpp  getting_started_listing_03.py  getting_started_listing_04.py  getting_started_listing_1.cpp  getting_started_listing_2.cpp  getting_started_listing_3.py  getting_started_listing_4.py  guide_access_bin_counts.cpp  guide_axis_basic_demo.cpp  guide_axis_circular.cpp  guide_axis_growing.cpp  guide_axis_with_labels.cpp  guide_axis_with_transform.cpp  guide_axis_with_uoflow_off.cpp  guide_custom_2d_axis.cpp  guide_custom_accumulators.cpp  guide_custom_accumulators_1.cpp  guide_custom_accumulators_2.cpp  guide_custom_accumulators_3.cpp  guide_custom_axis.cpp  guide_custom_axis_multiple_value_types.cpp  guide_custom_minimal_axis.cpp  guide_custom_modified_axis.cpp  guide_custom_storage.cpp  guide_fill_accumulator.cpp  guide_fill_histogram.cpp  guide_fill_profile.cpp  guide_fill_weighted_histogram.cpp  guide_fill_weighted_profile.cpp  (+32 more)
include/boost/: histogram.hpp
include/boost/histogram/: accumulators.hpp  adaptive_storage.hpp  algorithm.hpp  any_axis.hpp  arithmetic_operators.hpp  attribute.hpp  axis.hpp  axis_ostream_operators.hpp  basic_histogram.hpp  display.hpp  dynamic_histogram.hpp  dynamic_storage.hpp  fwd.hpp  grid.hpp  histogram.hpp  histogram_arithmetic_operators.hpp  histogram_base.hpp  histogram_dynamic_impl.hpp  histogram_fwd.hpp  histogram_impl_dynamic.hpp  indexed.hpp  (+31 more)
meta/: libraries.json
src/: axis.cpp  basic_histogram.cpp  histogram.cpp  histogram_base.cpp  module.cpp  nhistogram.cpp  nstore.cpp  serialization_suite.hpp  zero_suppression.cpp
src/python/: axis.cpp  basic_histogram.cpp  histogram.cpp  histogram_base.cpp  module.cpp  nhistogram.cpp  serialization_suite.hpp  utility.hpp
test/: CMakeLists.txt  Jamfile  Jamfile.v2  accumulators_collector_test.cpp  accumulators_count_test.cpp  accumulators_efficiency_test.cpp  accumulators_fraction_test.cpp  accumulators_mean_test.cpp  accumulators_serialization_test.cpp  accumulators_serialization_test_collector.xml  accumulators_serialization_test_sum_of_weights_squared.xml  accumulators_serialization_test_weighted_fraction.xml  accumulators_test.cpp  accumulators_thread_safe_test.cpp  accumulators_weighted_fraction_test.cpp  accumulators_weighted_mean_test.cpp  accumulators_weighted_sum_test.cpp  adaptive_storage2_test.cpp  adaptive_storage_serialization_test.cpp  adaptive_storage_test.cpp  algorithm_empty_test.cpp  algorithm_project_test.cpp  algorithm_reduce_test.cpp  algorithm_sum_test.cpp  array_storage_test.cpp  axis_bench.cpp  axis_binary_test.cpp  axis_boolean_test.cpp  axis_category_test.cpp  axis_circular_test.cpp  axis_deduction_guide_test.cpp  axis_int_resolver_test.cpp  axis_integer_test.cpp  axis_option_test.cpp  axis_piece_test.cpp  axis_piecewise_test.cpp  axis_regular_test.cpp  axis_size.cpp  axis_test.cpp  axis_traits_test.cpp  (+152 more)
test/check/: axis_size.cpp  run_speed_root.sh  sizeof.cpp  speed_cpp.cpp  speed_root.cpp  speed_vs_numpy.py  speed_vs_root.cpp
test/cmake_install_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
tools/: add_boilerplate.py  build_check.py  check_build_system.py  cov.py  cov.sh  cov_offline.sh  travis_install_boost.sh
(+342 files in other folders)
